# careplus

./: .gitignore  index.html  package-lock.json  package.json
backend/: .env.example  main..py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 779787e90532_initial_models.py
backend/api/v1/users/: users.py
backend/app/controllers/: auth.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: __init__.py  user.py
backend/app/schemas/requests/: users.py
backend/app/schemas/responses/: users.py
backend/core/: config.py  server.py
backend/core/controller/: base.py
backend/core/database/: __init__.py  session.py
backend/core/factory/: factory.py
backend/core/fastapi/middlewares/: authentication.py
backend/core/repository/: base.py
backend/core/security/: __init__.py  jwt.py
frontend/: package.json
frontend/src/components/ui/: Button.jsx
frontend/src/pages/: LoginPage.jsx
src/: App.jsx
src/components/: ConsentForm.jsx  IdentificationForm.jsx  MedicalInformation.jsx  PersonalInformationForm.jsx  RegisterForm.jsx
src/components/ui/: Button.jsx  Input.jsx
src/pages/: Appointment.jsx  Dashboard.jsx  Login.jsx  NotFoundPage.jsx  ProfileInformation.jsx  Register.jsx  RegisterPage.jsx  SuccessfullAppointment.jsx
src/utils/: index.js
